[package]
name = "idena-wasm"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["staticlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5"
thiserror = "2.0"
wasmer = { git = "https://github.com/ubiubi18/wasmer", rev = "b6fd9f9f2c0b625f73c8ddebb0dab0ae15d41d97", default-features = false, features = ["compiler", "universal"] }
wasmer-compiler-singlepass = { git = "https://github.com/ubiubi18/wasmer", rev = "b6fd9f9f2c0b625f73c8ddebb0dab0ae15d41d97" }
wasmer-types = { git = "https://github.com/ubiubi18/wasmer", rev = "b6fd9f9f2c0b625f73c8ddebb0dab0ae15d41d97" }
wasmer-middlewares = { git = "https://github.com/ubiubi18/wasmer", rev = "b6fd9f9f2c0b625f73c8ddebb0dab0ae15d41d97" }
wasmer-engine-universal = { git = "https://github.com/ubiubi18/wasmer", rev = "b6fd9f9f2c0b625f73c8ddebb0dab0ae15d41d97" }
loupe = "0.1.3"
protobuf = "3.7.2"
indexmap = "1.9"
hex = "0.4.3"

[dev-dependencies]
wat = "1.0"

[profile.release]
opt-level = 3
debug = false
rpath = true
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true
